--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -144,6 +144,56 @@
               </div>
             </div>
             <!--end row-->
+              <div class="accordion-item mb-4">
+                <h2 class="accordion-header" id="experienceOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#country" aria-expanded="true" aria-controls="country">
+                    국가
+                  </button>
+                </h2>
+                <div id="country" class="accordion-collapse collapse show" aria-labelledby="experienceOne">
+                  <div class="accordion-body">
+                    <div class="side-title">
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="전체" id="flexCheckChecked1" {% if 'all' in country %}checked{% endif %} name="selectall" onclick="selectAll(this)" />
+                        <label class="form-check-label text-muted" for="flexCheckChecked1">전체</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="미국" id="flexCheckChecked2" {% if '미국' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked2">미국</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="스웨덴" id="flexCheckChecked3" {% if '스웨덴' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked3">스웨덴</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="핀란드" id="flexCheckChecked4" {% if '핀란드' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked4">핀란드</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="프랑스" id="flexCheckChecked5" {% if '프랑스' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked5">프랑스</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="독일" id="flexCheckChecked6" {% if '독일' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked6">독일</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="캐나다" id="flexCheckChecked7" {% if '캐나다' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked7">캐나다</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="일본" id="flexCheckChecked8" {% if '일본' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked8">일본</label>
+                      </div>
+                      <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" value="IAEA" id="flexCheckChecked9" {% if 'IAEA' in country %}checked{% endif %} name="country" onclick="checkSelectAll()"/>
+                        <label class="form-check-label text-muted" for="flexCheckChecked9">IAEA</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div><!-- end accordion-item -->
+
           </form>
           <!--end form-->
         </div>
@@ -154,9 +204,19 @@
         function countryFilter(country) {
           var form = document.getElementById('search_filter');
 
-          document.getElementById('fieldFormControlInput').value = "{{ field }}";
+          if(country == 'all'){
+            form.submit();
+            return;
+          }
 
-          document.getElementById('exampleFormControlInput1').value = "{{ search }}";
+          var field = "{{ field }}"
+          var search = "{{ search }}"
+
+          if(field != 'None')
+            document.getElementById('fieldFormControlInput').value = field;
+
+
+          document.getElementById('exampleFormControlInput1').value = search;
 
           document.getElementById('countryInput').value = country;
 
@@ -164,62 +224,14 @@
         }
 
       </script>
+      <button type="button" name="button" onclick="countryFilter('all')">전체</button>
+      <button type="button" name="button" onclick="countryFilter('미국')">미국</button>
+      <button type="button" name="button" onclick="countryFilter('IAEA')">IAEA</button>
+      <button type="button" name="button" onclick="countryFilter('스웨덴')">스웨덴</button>
 
-      <button type="button" name="button" onclick="countryFilter('IAEA')">CLICK FILTRER</button>
+      {{ country|length}}: {{ country }}<br>
 
 
-      <div class="col-lg-10">
-        <div class="accordion-item mb-4">
-          <h2 class="accordion-header" id="experienceOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#country" aria-expanded="true" aria-controls="country">
-              국가
-            </button>
-          </h2>
-          <div id="country" class="accordion-collapse collapse show" aria-labelledby="experienceOne">
-            <div class="accordion-body">
-              <div class="side-title">
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked1" checked name="selectall" onclick="selectAll(this)" />
-                  <label class="form-check-label text-muted" for="flexCheckChecked1">전체</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="미국" id="flexCheckChecked2" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked2">미국</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked3" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked3">스웨덴</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked4" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked4">핀란드</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked5" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked5">프랑스</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked6" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked6">독일</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked7" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked7">캐나다</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked8" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked8">일본</label>
-                </div>
-                <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked9" checked name="country" onclick="checkSelectAll()"/>
-                  <label class="form-check-label text-muted" for="flexCheckChecked9">IAEA</label>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div><!-- end accordion-item -->
-
-      </div>
     </div>
     <!--end row-->
 
