--- a/templates/partials/rnd_navbar.html
+++ b/templates/partials/rnd_navbar.html
@@ -40,8 +40,8 @@
           <ul class="dropdown-menu dropdown-menu-center" aria-labelledby="jobsdropdown">
             <span class="dropdown-header">R&D 지원 검토 사례</span>
             <li><a class="dropdown-item" href="{% url 'rnd:case' %}">검토 진행사항</a></li>
-            <li><a class="dropdown-item" href="{% url 'rnd:case' %}">KAERI 연구 검토사례</a></li>
-            <li><a class="dropdown-item" href="{% url 'rnd:case' %}">KORAD 연구 검토사례</a></li>
+            <li><a class="dropdown-item" href="{% url 'rnd:KAERI_case' %}">KAERI 연구 검토사례</a></li>
+            <li><a class="dropdown-item" href="{% url 'rnd:KORAD_case' %}">KORAD 연구 검토사례</a></li>
           </ul>
 
         </li>
