--- a/templates/partials/rnd_base.html
+++ b/templates/partials/rnd_base.html
@@ -49,7 +49,15 @@
   </style>
 </head>
 
-<body>
+
+<script>
+  function loadDate(){
+    document.getElementById('dateControlInput').defaultValue = new Date().toISOString().substring(0, 10);
+  }
+</script>
+
+
+<body onload="loadDate()">
   <!--start page Loader -->
   <div id="preloader">
     <div id="status">
