--- a/src/scss/custom/components/_helper.scss
+++ b/src/scss/custom/components/_helper.scss
@@ -246,12 +246,13 @@ $value in $theme-colors {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px !important;
+    max-width: 1140px;
   }
 
   .custom-container {
     max-width: 90%;
   }
+
 }
 
 
