--- a/templates/partials/rnd_base.html
+++ b/templates/partials/rnd_base.html
@@ -46,6 +46,12 @@
     .page-content {
       min-height: 100vh;
     }
+
+    @media (min-width: 1400px)
+    .container {
+      max-width: 1320px!important;
+    }
+
   </style>
 </head>
 
