--- a/templates/kinsdb/UNIST/document.html
+++ b/templates/kinsdb/UNIST/document.html
@@ -45,25 +45,26 @@
 
       <div class="col-lg-12">
         <h4>Background</h4>
-        <ul>
-          <li>초기 검토 단계</li>
-          <li>주요 검토 단계</li>
-          <li>검토 의견서</li>
-          </ul>
-          <p>SR-Site 보고서는 2011년 개발된 스웨덴의 Site specific 보고서이며…… 예비 인허가신청(PSA)을 지원하기 위해</p>
+        <img src="{% static 'images/bkg.jpg' %}" alt="" class="img-fluid">
+
+        <p>SR-Site 보고서는 2011년 개발된 스웨덴의 Site specific 보고서이며 예비 인허가신청(PSA)을 지원하기 위해 작성되었다.</p>
       </div>
+
+      <div class="p-4 mb-4 border-bottom"></div>
 
       <div class="col-lg-12">
         <h4>적용된 법령(시행령) 및 규정(지침)</h4>
         <ul>
-        <li>법령(시행령): <span style="color: blue; text-decoration:underline;">ACT on Nuclear Activities 1984:3, Ordinance on Nuclear Activities 1984:14</span></li>
-        <li>규정(규제 지침):<span style="color: blue; text-decoration:underline;">SSMFS 2008:21, SSMFS 2008:37</span></li>
+          <li>법령(시행령): <span style="color: blue; text-decoration:underline;">ACT on Nuclear Activities 1984:3, Ordinance on Nuclear Activities 1984:14</span></li>
+          <li>규정(규제 지침):<span style="color: blue; text-decoration:underline;">SSMFS 2008:21, SSMFS 2008:37</span></li>
         </ul>
       </div>
 
-      <div class="col-lg-12">
-        <h4>Database</h4>
 
+      <div class="p-4 mb-4 border-bottom"></div>
+
+      <div class="col-lg-12">
+        <button type="button" class="btn btn-primary">Database</button>
 
         <div class="candidate-list-box card mt-4">
           <div class="card-body p-4">
@@ -101,6 +102,23 @@
           </div>
         </div>
 
+        <div class="candidate-list-box card mt-4">
+          <div class="card-body p-4">
+            <div class="row align-items-center">
+              <div class="col-lg-6">
+                <div class="candidate-list-content mt-lg-0">
+                  <h5 class="fs-19 mb-1"><a href="#" class="primary-link">완충재 및 뒤채움재 내 화학적 프로세스 및 침식검토-지화학 프로세스 관련</a> </h5>
+                  <p class="text-muted mb-2">[Technical Issue]</p>
+                  <ul class="list-inline mb-0 text-muted">
+                    <li class="list-inline-item">
+                      <i class="mdi mdi-map-marker"></i> 등록일자: 2022.11.01
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
