--- a/templates/cloud/extra-pages/sign-in.html
+++ b/templates/cloud/extra-pages/sign-in.html
@@ -59,8 +59,6 @@
                                             <div class="col-lg-6 text-center">
                                                 <div class="card-body p-4">
                                                     <a href="{% url 'index'%}">
-                                                        <img src="{% static 'images/logo-light.png' %}" alt="" class="logo-light">
-                                                        <img src="{% static 'images/logo-dark.png' %}" alt="" class="logo-dark">
                                                     </a>
                                                     <div class="mt-5">
                                                         <img src="{% static 'images/auth/sign-in.png' %}" alt="" class="img-fluid">
@@ -71,12 +69,12 @@
                                                 <div class="auth-content card-body p-5 h-100 text-white">
                                                     <div class="w-100">
                                                         <div class="text-center mb-4">
-                                                            <h5>Welcome Back !</h5>
-                                                            <p class="text-white-70">Sign in to continue to Jobcy.</p>
+                                                            <h5>기관 로그인</h5>
+                                                            <p class="text-white-70">KINS 심층처분시스템 안전규제 데이터베이스</p>
                                                         </div>
                                                         <form action="{% url 'rnd:index'%}" class="auth-form">
                                                             <div class="mb-3">
-                                                                <label for="usernameInput" class="form-label">Username</label>
+                                                                <label for="usernameInput" class="form-label">ID</label>
                                                                 <input type="text" class="form-control" id="usernameInput" placeholder="Enter your username" required>
                                                             </div>
                                                             <div class="mb-3">
@@ -90,7 +88,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text-center">
-                                                                <button type="submit" class="btn btn-white btn-hover w-100">Sign In</button>
+                                                                <button type="submit" class="btn btn-white btn-hover w-100">로그인</button>
                                                             </div>
                                                         </form>
                                                         <div class="mt-4 text-center">
@@ -144,7 +142,6 @@
                 </div>
             </div>
             <div class="bottom">
-                <a href="javascript: void(0);" class="settings rounded-end"><i class="mdi mdi-cog mdi-spin"></i></a>
             </div>
         </div>
         <!-- end switcher-->
